<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NuevoPedidoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="78dp">

        <TextView
            android:id="@+id/lblTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_titulo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_lbl_correo" />

        <EditText
            android:id="@+id/edtPedidoCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_lbl_modo_entrega" />

        <RadioGroup
            android:id="@+id/optPedidoModoEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/optPedidoRetira"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedido_opt_retira"
                />

            <RadioButton
                android:id="@+id/optPedidoEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pedido_opt_entrega" />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_lbl_direccion" />

        <EditText
            android:id="@+id/edtPedidoDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pedido_lbl_hora_entrega" />

        <EditText
            android:id="@+id/edtPedidoHoraEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:text="00:00" />

        <ListView
            android:id="@+id/lstPedidoItems"
            android:layout_width="match_parent"
            android:layout_height="80pt">

        </ListView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPedidoAddProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Agregar producto" />

            <Button
                android:id="@+id/btnPedidoQuitarProducto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Quitar Producto" />
        </LinearLayout>

        <TextView
            android:id="@+id/lblTotalPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Total del pedido: $0.00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPedidoHacerPedido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hacer Pedido" />

            <Button
                android:id="@+id/btnPedidoVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Volver" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>